--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="140dp"
-        android:layout_height="161dp"
-        android:layout_centerInParent="true"
+        android:layout_width="214dp"
+        android:layout_height="317dp"
         android:background="@color/splashprimary"
         android:contentDescription="Splashscreen"
         android:scaleType="fitCenter"
